<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <View
        android:id="@+id/topViewBg"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/color_action_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/game_logo_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginTop="@dimen/half_spacing"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/topViewBg"
        app:layout_constraintLeft_toLeftOf="@+id/topViewBg"
        app:layout_constraintTop_toTopOf="@+id/topViewBg" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_sans_ms"
        android:textColor="@color/color_top_score"
        android:textSize="@dimen/medium_text_size_2"
        app:layout_constraintBottom_toBottomOf="@+id/topViewBg"
        app:layout_constraintLeft_toLeftOf="@+id/topViewBg"
        app:layout_constraintRight_toRightOf="@+id/topViewBg"
        app:layout_constraintTop_toTopOf="@+id/topViewBg" />

    <TextView
        android:id="@+id/textViewScoresBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing"
        android:background="@drawable/textview_bg_rounded"
        android:elevation="4dp"
        android:fontFamily="@font/comic_sans_ms"
        android:paddingHorizontal="@dimen/three_fourth_spacing"
        android:paddingVertical="@dimen/low_spacing"
        android:text="@string/text_high_score_btn"
        android:textAlignment="center"
        android:textColor="@color/color_top_score"
        android:textSize="@dimen/high_score_btn_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topViewBg"
        app:layout_constraintRight_toRightOf="@+id/topViewBg"
        app:layout_constraintTop_toTopOf="@+id/topViewBg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/board"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/three_fourth_spacing"
        android:alpha="0"
        app:cardBackgroundColor="@color/color_recyclerview_game_bg"
        app:cardCornerRadius="@dimen/three_fourth_spacing"
        app:cardElevation="@dimen/board_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/half_spacing"
            android:layout_marginTop="@dimen/half_spacing"
            android:layout_marginBottom="@dimen/half_spacing_high"

            android:background="@android:color/transparent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewScoreOnMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_score_margin_bottom"
        android:elevation="@dimen/text_score_elevation"
        android:fontFamily="@font/comic_sans_ms"
        android:textColor="@color/color_action_bar"
        android:textSize="@dimen/text_score_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>