...
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_view_height"
        android:background="@color/color_action_bar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/spacing"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="@+id/topViewBg"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/topViewBg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewScore"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layoutAnimation="@anim/layout_fall_down"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
...
